--- a/tModPorter.Tests/tModPorter.Tests.csproj
+++ b/tModPorter.Tests/tModPorter.Tests.csproj
@@ -23,4 +23,20 @@
       <ProjectReference Include="..\tModPorter\tModPorter.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Compile Update="TestData\**\*.cs">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Compile Remove="TestData\**\*.Fix.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Content Include="TestData\**\*.Fix.cs">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
 </Project>
